hdparm-7.1
	- big-endian fixes for -I, --Istdin, --Istdout
	- cody tidying in sgio.c
	- updated help/manpage for -v
	- marked -s1 as (DANGEROUS)
hdparm-7.0
	- new command-line parser
	- allow any chars (except 0x00) in security passwords
	- fixed -s manpage format error
	- updated -W manpage description
	- major internal rework in hdparm.c
	- added SET_FEATURES subcommand 0x07 to the -s0 sequence
	   (the kernel will eventually have to do this automatically)
	- fixed duplicate display of udma modes 3,4,5 with -i
	- added Timed-Command-Completion (TLC) data for -I
	- added support for SG_IO (SAT) ATA_16 command transport
	- ignore case for longargs (eg. --istdout or --Istdout)
	- remove dependencies on <linux/hdreg.h>
	- added query wcache (-W)
	- enhanced query acoustic (-M)
	- added kernel_patches directory with patches for ATAPI support
hdparm-6.9
	- added -s flag to control power-up in standby
	  (thanks to chrfranke)
	- make --Istdin more robust
	- added -I recognition of SMART Command Transport (SCT)
	   (thanks to chrfranke).
	- fix X2 over-reporting of -T results
	- add udma 3/4/5 modes to the -i results
hdparm-6.8
	- improve parsing/operation of --Istdin function
hdparm-6.7
	- don't default to "-v" when only new "--" longopts are used.
	- calculate integrity word if not correct
	- remove used code/parameter from identify()
	- fix "(null)" strings from the "Drive conforms to" line of -I
	- tidied up usage of prefix vars in Makefile
	- fix bug in -C implementation
	- new -H flag for (Hitachi) drive temperature
hdparm-6.6
	- fix build for Redhat/Fedora systems.
	- disable security commands when building on Redhat/Fedora,
	  as they lack the required data structures in the system headers.
hdparm-6.5
	- fix -I bugs from version 6.4.
hdparm-6.4
	- Makefile updates from Mikkel Krautz.
	- manpage updates / corrections.
	- fixed bug in -C code.
	- major updates to bring -I information up to current specs.
hdparm-6.3
	- added reporting of ATA revision numbers > 7