@@ -29,9 +29,9 @@ extern int verbose;
 #define SG_ATA_PROTO_NON_DATA	( 3 << 1)
 #define SG_ATA_PROTO_PIO_IN	( 4 << 1)
 #define SG_ATA_PROTO_PIO_OUT	( 5 << 1)
-#define SG_ATA_PROTO_DMA		( 6 << 1)
-#define SG_ATA_PROTO_UDMA_IN	(11 << 1)	/* not yet supported in libata */
-#define SG_ATA_PROTO_UDMA_OUT	(12 << 1)	/* not yet supported in libata */
+#define SG_ATA_PROTO_DMA	( 6 << 1)
+#define SG_ATA_PROTO_UDMA_IN	(11 << 1) /* not yet supported in libata */
+#define SG_ATA_PROTO_UDMA_OUT	(12 << 1) /* not yet supported in libata */
 
 #define ATA_USING_LBA		(1 << 6)
 
@@ -64,17 +64,18 @@ void tf_init (struct ata_tf *tf, __u8 ata_op, __u64 lba, unsigned int nsect)
 
 	memset(tf, 0, sizeof(*tf));
 	tf->command = ata_op;
+	tf->dev     = ATA_USING_LBA;
 	if (lba) {
 		tf->lob.lbal = lba;
 		tf->lob.lbam = lba >>  8;
 		tf->lob.lbah = lba >> 16;
 		if ((lba & ~lba28_mask) == 0) {
-			tf->dev = ((lba >> 24) & 0x0f) | ATA_USING_LBA;
+			tf->dev |= (lba >> 24) & 0x0f;
 		} else {
-			tf->dev = ATA_USING_LBA;
 			tf->hob.lbal = lba >> 24;
 			tf->hob.lbam = lba >> 32;
 			tf->hob.lbah = lba >> 36;
+			tf->is_lba48 = 1;
 		}
 	}
 	if (nsect) {
@@ -98,16 +99,36 @@ __u64 tf_to_lba (struct ata_tf *tf)
 	return lba64;
 }
 
-static int bad_sense (unsigned char *sb, int len)
+static void dump_bytes (const char *prefix, unsigned char *p, int len)
 {
 	int i;
 
-	fprintf(stderr, "SG_IO: bad/missing ATA_16 sense data:");
+	if (prefix)
+		fprintf(stderr, "%s: ", prefix);
 	for (i = 0; i < len; ++i)
-		fprintf(stderr, " %02x", sb[i]);
+		fprintf(stderr, " %02x", p[i]);
 	fprintf(stderr, "\n");
+}
+
+static int bad_sense (unsigned char *sb, int len)
+{
+	dump_bytes("SG_IO: bad/missing ATA_16 sense data:", sb, len);
 	return EIO;
 }
+
+enum {
+	SG_CDB2_TLEN_NODATA	= 0 << 0,
+	SG_CDB2_TLEN_FEAT	= 1 << 0,
+	SG_CDB2_TLEN_NSECT	= 2 << 0,
+
+	SG_CDB2_TLEN_BYTES	= 0 << 2,
+	SG_CDB2_TLEN_SECTORS	= 1 << 2,
+
+	SG_CDB2_TDIR_TO_DEV	= 0 << 3,
+	SG_CDB2_TDIR_FROM_DEV	= 1 << 3,
+
+	SG_CDB2_CHECK_COND	= 1 << 5,
+};
 
 int sg16 (int fd, int rw, struct ata_tf *tf,
 	void *data, unsigned int data_bytes, unsigned int timeout_secs)
@@ -119,7 +140,11 @@ int sg16 (int fd, int rw, struct ata_tf *tf,
 	memset(&cdb, 0, sizeof(cdb));
 	cdb[ 0] = SG_ATA_16;
 	cdb[ 1] = data ? (rw ? SG_ATA_PROTO_PIO_OUT : SG_ATA_PROTO_PIO_IN) : SG_ATA_PROTO_NON_DATA;
-	cdb[ 2] = 0x20;	/* to request sense data on completion */
+	cdb[ 2] = SG_CDB2_CHECK_COND;
+	if (data) {
+		cdb[2] |= SG_CDB2_TLEN_NSECT | SG_CDB2_TLEN_SECTORS;
+		cdb[2] |= rw ? SG_CDB2_TDIR_TO_DEV : SG_CDB2_TDIR_FROM_DEV;
+	}
 	cdb[ 4] = tf->lob.feat;
 	cdb[ 6] = tf->lob.nsect;
 	cdb[ 8] = tf->lob.lbal;
@@ -148,20 +173,22 @@ int sg16 (int fd, int rw, struct ata_tf *tf,
 	io_hdr.pack_id		= tf_to_lba(tf);
 	io_hdr.timeout		= (timeout_secs ? timeout_secs : 5) * 1000; /* msecs */
 
-	if (ioctl(fd, SG_IO, &io_hdr) < 0) {
+	if (verbose)
+		dump_bytes("outgoing cdb", cdb, sizeof(cdb));
+	if (ioctl(fd, SG_IO, &io_hdr) == -1) {
 		if (verbose)
 			perror("ioctl(fd,SG_IO)");
 		return -1;	/* SG_IO not supported */
 	}
-
+	if (verbose) {
+		fprintf(stderr, "SG_IO: ATA_16 status=0x%x, host_status=0x%x, driver_status=0x%x\n",
+			io_hdr.status, io_hdr.host_status, io_hdr.driver_status);
+	}
 	if (io_hdr.host_status || io_hdr.driver_status != SG_DRIVER_SENSE
 	 || (io_hdr.status && io_hdr.status != SG_CHECK_CONDITION))
 	{
-		if (verbose) {
-			fprintf(stderr, "SG_IO: ATA_16 status=0x%x, host_status=0x%x, driver_status=0x%x\n",
-				io_hdr.status, io_hdr.host_status, io_hdr.driver_status);
-		}
-		return EIO;
+	  	errno = EIO;
+		return -1;
 	}
 
 	if (sb[0] != 0x72 || sb[7] < 14)
@@ -184,6 +211,8 @@ int sg16 (int fd, int rw, struct ata_tf *tf,
 		tf->hob.lbam  = desc[ 8];
 		tf->hob.lbah  = desc[10];
 	}
+	if (verbose)
+		fprintf(stderr, "      ATA_16 tf->status=0x%02x tf->error=0x%02x\n", tf->status, tf->error);
 	return 0;
 }
 
